# ratadroid_cli

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs
template/: .gitignore  README.md  build.gradle  local.properties  settings.gradle
template/app/: build.gradle
template/app/src/main/: AndroidManifest.xml
template/app/src/main/java/com/ratadroid/ratadroid_template/: NativeActivity.java
template/app/src/main/java/com/ratadroid/template/: NativeActivity.java
template/app/src/main/res/values/: strings.xml
template/ratatui-android/: Cargo.toml  README.md
template/ratatui-android/src/: android_render.rs  backend.rs  input.rs  lib.rs  rasterizer.rs
template/ratatui-android/src/widgets/: direct_keyboard.rs  keyboard.rs  mod.rs
template/rust/: Cargo.toml
template/rust/src/: demo.rs  jni_utils.rs  lib.rs  runtime.rs
template/rust/src/runtime/: input.rs  keyboard.rs  lifecycle.rs  mod.rs  rendering.rs  window.rs
templates/: AndroidManifest.xml  NativeActivity.java  README.md  app_build.gradle  root_build.gradle  rust_Cargo.toml  rust_backend.rs  rust_input.rs  rust_lib.rs  rust_rasterizer.rs  settings.gradle  strings.xml
test_template_app/: .gitignore  README.md  build.gradle  local.properties  settings.gradle
test_template_app/app/: build.gradle
test_template_app/app/src/main/: AndroidManifest.xml
test_template_app/app/src/main/java/com/ratadroid/test_template_app/: NativeActivity.java
test_template_app/app/src/main/res/values/: strings.xml
test_template_app/gradle/wrapper/: gradle-wrapper.properties
test_template_app/rust/: Cargo.toml  build.rs
test_template_app/rust/src/: backend.rs  button.rs  input.rs  lib.rs  rasterizer.rs  todo_app.rs
