[package]
name = "test_template_app"
version = "0.1.0"
edition = "2021"

[lib]
name = "ratadroid"
crate-type = ["cdylib"]

[dependencies]
ratatui = "0.26"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.5", features = ["native-activity"] }
ndk = "0.8"
ndk-sys = "0.5"
android_logger = "0.13"
log = "0.4"
ab_glyph = "0.2"
crossterm = "0.27"
tui-textarea = "0.6"
jni = "0.21"
ndk-glue = "0.5"
ndk-context = "0.1.1"

